# naver-news-cluster

./: .env_example  Makefile  README.md  pyproject.toml
app/: main.py
app/api/v1/: cluster.py  health.py
app/core/: dependencies.py  logger.py  settings.py
app/infra/: embedding.py  langfuse.py
app/schemas/: cluster.py
app/services/: cluster_service.py  news_fetcher.py  text_preprocessor.py
docker/app/: Dockerfile  docker-compose.yml
docker/langfuse/: docker-compose_backup.yml
